# fase_5_datathon

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_main.http
data/raw/: topk.py
notebooks/: analisando_dados.ipynb  testando_alogoritimos_recomendacao.ipynb
webapp/: main.py  pipeline.py  repository.py  service.py
