[project]
name = "fase-5-datathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Lenonn Oliveira da Silva",email = "pedro.lenonn@tre-pa.jus.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
